[package]
name = "foo"
version = "0.1.0"
authors = ["Eric Huss"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.3.0"
winapi = { version = "0.3.9", features = ["sddl", "aclapi", "securitybaseapi", "processthreadsapi"] }
